fix(scrollbar): Make scrollbar gutter stable

--- a/frappe/public/scss/desk/scrollbar.scss
+++ b/frappe/public/scss/desk/scrollbar.scss
@@ -6,6 +6,7 @@
 
 html {
 	scrollbar-width: auto;
+	scrollbar-gutter: stable;
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -19,7 +20,7 @@ html {
 // 	background: var(--scrollbar-track-color);
 // }
 
-*:not(#page-form-builder *)::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	width: 6px;
 	height: 6px;
 }
